--- a/React-class/package.json
+++ b/React-class/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "vite-plugin-pwa": "^0.16.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
